# aimo2

./: .gitignore  .gitmodules  README.md  kaggle_forum.md  pyproject.toml  requirements.txt
cfgs/: 0325-dpsk-qwen-14b.yaml
imagination_aimo2/: aggregators.py  backup_submission.ipynb  final_eval.py  local_eval.py  local_eval_kaggle.py  local_eval_v1.py
imagination_aimo2/kaggle_evaluation/: __init__.py
imagination_aimo2/kaggle_evaluation/core/: base_gateway.py  relay.py  templates.py
kaggle_evaluation/: aimo_2_gateway.py
kaggle_evaluation/core/: base_gateway.py  relay.py
scripts/: analyze_early_stop.py  dump_diversesysprompt_cfg.py  local_eval.sh  plot_table_local.py  run_quant_awq.sh  run_quant_rep_kv.sh
